tools/k8s-dashboard/tmp.yaml
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/charts/kong/templates/service-kong-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kong-manager
  namespace: k8s-dashboard
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.38.0
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.6"
spec:
  type: NodePort
  ports:
  - name: kong-manager
    port: 8002
    targetPort: 8002
    protocol: TCP
  - name: kong-manager-tls
    port: 8445
    targetPort: 8445
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "release-name"
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/charts/kong/templates/service-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kong-proxy
  namespace: k8s-dashboard
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.38.0
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.6"
    enable-metrics: "true"
spec:
  type: ClusterIP
  ports:
  - name: kong-proxy
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "release-name"
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/services/api.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
    app.kubernetes.io/version: 1.8.0
    app.kubernetes.io/component: api
  name: release-name-kubernetes-dashboard-api
spec:
  ports:
    - name: api
      port: 8000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/services/auth.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-auth
    app.kubernetes.io/version: 1.1.3
    app.kubernetes.io/component: auth
  name: release-name-kubernetes-dashboard-auth
spec:
  ports:
    - name: auth
      port: 8000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-auth
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/services/metrics-scraper.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
    app.kubernetes.io/version: 1.1.1
    app.kubernetes.io/component: metrics-scraper
  name: release-name-kubernetes-dashboard-metrics-scraper
spec:
  ports:
    - port: 8000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/services/web.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
    app.kubernetes.io/version: 1.4.0
    app.kubernetes.io/component: web
  name: release-name-kubernetes-dashboard-web
spec:
  ports:
    - name: web
      port: 8000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/charts/kong/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kong
  namespace:  k8s-dashboard
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.38.0
    app.kubernetes.io/instance: "release-name"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.6"
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kong
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: "release-name"

  template:
    metadata:
      annotations:
        kuma.io/service-account-token-volume: release-name-kong-token
        kuma.io/gateway: "enabled"
        traffic.sidecar.istio.io/includeInboundPorts: ""
      labels:
        app.kubernetes.io/name: kong
        helm.sh/chart: kong-2.38.0
        app.kubernetes.io/instance: "release-name"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/version: "3.6"
        app.kubernetes.io/component: app
        app: release-name-kong
        version: "3.6"
    spec:
      serviceAccountName: release-name-kong
      automountServiceAccountToken: false
      
      containers:
      - name: "proxy"
        image: kong:3.6
        imagePullPolicy: IfNotPresent
        securityContext:
        
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        lifecycle:
          preStop:
            exec:
              command:
              - kong
              - quit
              - --wait=15
        ports:
        - name: proxy
          containerPort: 8000
          protocol: TCP
        - name: status
          containerPort: 8100
          protocol: TCP
        volumeMounts:
          - name: release-name-kong-prefix-dir
            mountPath: /kong_prefix/
          - name: release-name-kong-tmp
            mountPath: /tmp
          - name: kong-custom-dbless-config-volume
            mountPath: /kong_dbless/
          
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status/ready
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          {} 
      securityContext:
        {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: release-name-kong-prefix-dir
          emptyDir:
            sizeLimit: 256Mi
        - name: release-name-kong-tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: release-name-kong-token
          projected:
            sources:
            - serviceAccountToken:
                expirationSeconds: 3607
                path: token
            - configMap:
                items:
                - key: ca.crt
                  path: ca.crt
                name: kube-root-ca.crt
            - downwardAPI:
                items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
        - name: kong-custom-dbless-config-volume
          configMap:
            name: kong-dbless-config
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/api.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
    app.kubernetes.io/version: 1.8.0
    app.kubernetes.io/component: api
  annotations:
  name: release-name-kubernetes-dashboard-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-api
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.6.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-api
        app.kubernetes.io/version: 1.8.0
        app.kubernetes.io/component: api
      annotations:
        checksum/config: 75549d5c2644c131b2c2f630977c42c3ec8538f6856ca100b4a5cd46377e6c4f
    spec:
      containers:
        - name: kubernetes-dashboard-api
          image: "docker.io/kubernetesui/dashboard-api:1.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - --namespace=k8s-dashboard
            - --metrics-scraper-service-name=release-name-kubernetes-dashboard-metrics-scraper

          ports:
          
            - containerPort: 8000
              name: api
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume
      serviceAccountName: release-name-kubernetes-dashboard-api
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/auth.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-auth
    app.kubernetes.io/version: 1.8.0
    app.kubernetes.io/component: auth
  annotations:
  name: release-name-kubernetes-dashboard-auth
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-auth
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.6.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-auth
        app.kubernetes.io/version: 1.1.3
        app.kubernetes.io/component: auth
      annotations:
        checksum/config: c90232ee8b404bf67f1ccf5f9b9f8c0cb8930754ab4fe61673e4ceb3ea0dbdfe
    spec:
      containers:
        - name: kubernetes-dashboard-auth
          image: "docker.io/kubernetesui/dashboard-auth:1.1.3"
          imagePullPolicy: IfNotPresent
          args:

          ports:
          
            - containerPort: 8000
              name: auth
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/metrics-scraper.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
    app.kubernetes.io/version: 1.1.1
    app.kubernetes.io/component: metrics-scraper
  annotations:
  name: release-name-kubernetes-dashboard-metrics-scraper
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.6.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
        app.kubernetes.io/version: 1.1.1
        app.kubernetes.io/component: metrics-scraper
      annotations:
    spec:
      containers:
        - name: kubernetes-dashboard-metrics-scraper
          image: "docker.io/kubernetesui/dashboard-metrics-scraper:1.1.1"
          imagePullPolicy: IfNotPresent

          ports:
          
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
          
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume

      serviceAccountName: release-name-kubernetes-dashboard-metrics-scraper
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/deployments/web.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
    app.kubernetes.io/version: 1.4.0
    app.kubernetes.io/component: web
  annotations:
  name: release-name-kubernetes-dashboard-web
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-web
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.6.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-web
        app.kubernetes.io/version: 1.4.0
        app.kubernetes.io/component: web
      annotations:
    spec:
      containers:
        - name: kubernetes-dashboard-web
          image: "docker.io/kubernetesui/dashboard-web:1.4.0"
          imagePullPolicy: IfNotPresent
          args:
            - --namespace=k8s-dashboard
            - --settings-config-map-name=release-name-kubernetes-dashboard-web-settings

          ports:
          
            - containerPort: 8000
              name: web
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume

      serviceAccountName: release-name-kubernetes-dashboard-web
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/networking/ingress.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.6.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
  annotations:
    cert-manager.io/issuer: selfsigned
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-kong-proxy
                port:
                  number: 80
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/extras/manifests.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/extras/servicemonitor.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/security/networkpolicy.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/charts/kubernetes-dashboard/templates/security/pdb.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
